# Alpha-Arena-Reverse-Engineering

./: .gitignore  EXTRACTION_STRATEGY.md  HANDOFF.md  QUICKSTART.md  README.md  SESSION_START_PROMPT.md  USER_MANUAL.md  pyproject.toml
archive/: QUICKSTART.txt  analyze_conversations.py  analyze_extraction_cost.py  analyze_local_data.py  analyze_strategies.py  check_conversation_structure.py  check_db.py  check_db2.py  debug_extension.md  example.py  export_message.py  nof1_analyzer.py  nof1_monitor.py  nof1_scraper.py
collector/: README.md  package.json  sample-event.json  schema.json  server.js  validate.js
data/openmemory_export/: openmemory_backup_session_end.json  openmemory_batch_all_20251029_153126.json  session_backup_20251029_backup.json
docs/: ARCHITECTURE_DECISIONS.md  CLAUDE_CODE_GUIDE.md  FULL_CONTENT_CAPTURE_FIX.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  MCP_SETUP.md  MCP_TROUBLESHOOTING.md  OPENMEMORY_PROCEDURES.md  OpenMemory_Integration_Guide.md  PROFESSIONAL_IMPLEMENTATION_SUMMARY.md  SETUP.md  WORKFLOW_DESIGN.md  WORKFLOW_QUICKSTART.md
src/: __init__.py  chain_extractor.py  cli.py  integration_cli.py  merger.py  models.py  nof1_navigator.py  openmemory_exporter.py  scraper.py  sqlite_reader.py  storage.py
workflows/: analyze_reasoning_patterns.py  analyze_strategies.py  analyze_strategies_local.py  comprehensive_analysis.py  extract_portfolio_data.py  extract_structured_reasoning.py  identify_unknown_models.py  quick_analysis.py  show_recent_messages.py  start_capture.py  sync_to_openmemory.py  verify_capture.py  verify_extraction.py
(+5 files in other folders)
